fixing about on mobile

--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -69,6 +69,6 @@
     }
     .about-container .description-container{
         position: relative;
-        margin: 100px 0;
+        margin: 200px 0 100px;
     }
 }
